# OfflineRayTracing

./: .gitignore  CMakeLists.txt  README.md  build_sln.bat
code/: CMakeLists.txt  main.cpp
code/cpu_engin/Inc/: BoundingBox.h  BvhTree.h  Camera.h  HitResult.h  LdsGenerator.h  Material.h  MaterialCookTorrance.h  MaterialDefuse.h  MaterialFrostedGlass.h  MaterialSet.h  MaterialSpecular.h  MaterialTransparent.h  Mesh.h  Randerer.h  Renderer.h  Scene.h  Shape.h  ShapeSet.h  TexureSampler.h  Triangle.h  Utils.h
code/cpu_engin/Src/: BoundingBox.cpp  BvhTree.cpp  Camera.cpp  LdsGenerator.cpp  Material.cpp  MaterialCookTorrance.cpp  MaterialDefuse.cpp  MaterialFrostedGlass.cpp  MaterialSpecular.cpp  MaterialTransparent.cpp  Mesh.cpp  Randerer.cpp  Renderer.cpp  Scene.cpp  Shape.cpp  Sphere.cpp  TexureSampler.cpp  Triangle.cpp  Utils.cpp
code/hmi/Inc/: SceneReader.h
code/hmi/Src/: SceneReader.cpp
models/: README.md
models/Sample/: README.md  scene.xml
offline_rendering/Inc/: BvhTree.h  HitResult.h  LdsGenerator.h  Material.h  MaterialCookTorrance.h  MaterialDefuse.h  MaterialFrostedGlass.h  MaterialSpecular.h  MaterialTransparent.h  Mesh.h  Randerer.h  Scene.h  Shape.h  Sphere.h  TexureSampler.h  Triangle.h  Utils.h
offline_rendering/Src/: BoundingBox.cpp  BvhTree.cpp  LdsGenerator.cpp  Material.cpp  MaterialCookTorrance.cpp  MaterialDefuse.cpp  MaterialFrostedGlass.cpp  MaterialSpecular.cpp  MaterialTransparent.cpp  Mesh.cpp  Randerer.cpp  Scene.cpp  Shape.cpp  Sphere.cpp  TexureSampler.cpp  Triangle.cpp  Utils.cpp  main.cpp
result/: README.md
scripts/: SobelGenerate.py  build_debug_mingw.bat  build_release_mingw.bat  build_sln.bat  clean.bat  drawBoundingBox.py  drawRays.py  env_config.bat  run.bat
tools/: SobelGenerate.py  drawRays.py
tools/SaveBounds/: Boxes01.txt  Boxes02.txt  Boxes03.txt  Boxes04.txt  Boxes05.txt  Boxes06.txt  Boxes07.txt  Boxes08.txt  Boxes09.txt  Boxes10.txt
tools/SaveRay/: Rays.txt
